--- a/index.html
+++ b/index.html
@@ -27,15 +27,20 @@
       <a href="index.html">
         <img src= "./img/ECode.png" alt="E-Code" class="logo" width="90px" height="90px"/>
       </a>
-<!-- INPUT DE BUSQUEDA -->
-      <form class="d-flex">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"/>
-        <button class="btn" type="submit">Search</button>
-      </form>
-      <!-- ICONO DE CARRITO-->
-      
-      <i class="fa fa-cart-shopping"" aria-hidden="true"></i>
+       <!-- ICONO DE CARRITO-->
+      <nav class="navbar"> 
+        <div class="container-fluid">
       <span id="cart-counter">0</span>
+      <i class="fa fa-cart-shopping"" aria-hidden="true"></i>
+      </div>
+      </nav>
+<!-- INPUT DE BUSQUEDA -->
+ <nav class="navbar"> 
+    <div class="container-fluid">
+        <form class="d-flex">
+          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"/>
+          <button class="btn" type="submit">Search</button>
+        </form>
     </div>
   </nav>
 
@@ -65,7 +70,9 @@
   </div>
 </div>
 <footer>
-  <div class="center">Tutora Albamar Flores</div>
+  <a href="https://www.linkedin.com/in/albamarfdc/">
+    <i  id="linkedin"class="fa-brands fa-linkedin"></i></a>
+    <div>Desarrollado: Albamar Flores</div>
 </footer>
 
 
