--- a/index.html
+++ b/index.html
@@ -80,9 +80,15 @@
   <!-- SCRIPT DE LIBRERIAS Y JS -->
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
   <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+
+<script type="text/javascript">
+  emailjs.init('QA0yLSdwUjICFook7')
+</script>
 
   <script src="./JS/app.js" type="module"></script>
   <script src="./JS/animationCart.js"></script>
+
   
 </body>
 </html>
